<resources>
    <string name="app_name">CryptoOverview</string>
    <string name="text_label_home">Home</string>
    <string name="text_label_watch_list">Favorit</string>
    <string name="text_label_news">News</string>
    <string name="text_label_wallet">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_change">%d(%f)</string>
    <string name="refresh_text">last update %s</string>

    <string name="market_cap">Market Cap :</string>
    <string name="volume_24h">Volume 24H :</string>
    <string name="max_supply">Max Supply :</string>
    <string name="circulating_supply">Circulating Supply :</string>
    <string name="change_1d">Change 1D :</string>
    <string name="change_1w">Change 1W :</string>
    <string name="change_1m">Change 1M :</string>
    <string name="change_1y">Change 1Y :</string>
    <string name="try_again">Please Tap To Try Again</string>
    <string name="H1">1h</string>
    <string name="H2">2h</string>
    <string name="H4">4h</string>
    <string name="H8">8h</string>
    <string name="D1">1d</string>
    <string name="W1">1w</string>
</resources>